--- a/networking/synthetic/svc-ip-test-setup.yaml
+++ b/networking/synthetic/svc-ip-test-setup.yaml
@@ -5,19 +5,11 @@
   user: root
   tasks:
     - name: Copy ssh public key to local systems
-      copy: src=id_rsa.pub dest=/root/.ssh/.
+      copy: src=id_rsa.pub dest=/root/.ssh/
 
 - hosts: sender:receiver
   remote_user: root
   tasks:
-  - name: Create directory for uperf docker image resources
-    file: path=/tmp/uperf state=directory
-
-  - name: Copy Dockerfile to sender
-    copy: src=uperf/Dockerfile dest=/tmp/uperf/Dockerfile
-
-  - name: Build uperf docker image
-    shell: docker build --tag centos/uperf /tmp/uperf
 
   - name: Set tcp_tw_reuse=1
     shell: sysctl net.ipv4.tcp_tw_reuse=1
@@ -26,6 +18,7 @@
     shell: sysctl net.ipv4.tcp_tw_recycle=1
 
 - hosts: master
+  connection: local
   remote_user: root
   tasks:
   - name: Create SSH directory /root/.ssh if it does not exist
@@ -108,6 +101,7 @@
     script: scripts/wait-ready.sh receiver
 
 - hosts: master
+  connection: local
   remote_user: root
   pre_tasks:
   - name: Get sender service ip addresses
